--- a/notas/notas.bib
+++ b/notas/notas.bib
@@ -90,6 +90,21 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/28Z48F8D/Richter - 2020 - From Categories to Homotopy Theory.pdf}
 }
 
+@book{srinivasAlgebraicKTheory1996,
+  title = {Algebraic {{K-Theory}}},
+  author = {Srinivas, V.},
+  editor = {Bass, Hyman and Oesterlé, Joseph and Weinstein, Alan},
+  editortype = {redactor},
+  date = {1996},
+  series = {Progress in {{Mathematics}}},
+  publisher = {Birkhäuser Boston},
+  location = {Boston, MA},
+  doi = {10.1007/978-0-8176-4739-1},
+  isbn = {978-0-8176-4736-0 978-0-8176-4739-1},
+  langid = {english},
+  file = {/Users/abrahamrojasvega/Zotero/storage/DMVGHGPT/Srinivas - 1996 - Algebraic K-Theory.pdf}
+}
+
 @incollection{suslinStabilityAlgebraicKtheory1982,
   title = {Stability in Algebraic {{K-theory}}},
   booktitle = {Algebraic {{K-Theory}}},
@@ -119,4 +134,17 @@
   pubstate = {prepublished},
   keywords = {Mathematics - Algebraic Topology,Mathematics - Geometric Topology},
   file = {/Users/abrahamrojasvega/Zotero/storage/39AWFBQG/Wahl - 2022 - Homological stability a tool for computations.pdf;/Users/abrahamrojasvega/Zotero/storage/YDTFIHHZ/2203.html}
+}
+
+@book{weibelIntroductionHomologicalAlgebra1994,
+  title = {An {{Introduction}} to {{Homological Algebra}}},
+  author = {Weibel, Charles A.},
+  date = {1994-04-29},
+  edition = {1},
+  publisher = {Cambridge University Press},
+  doi = {10.1017/CBO9781139644136},
+  abstract = {The landscape of homological algebra has evolved over the last half-century into a fundamental tool for the working mathematician. This book provides a unified account of homological algebra as it exists today. The historical connection with topology, regular local rings, and semi-simple Lie algebras are also described. This book is suitable for second or third year graduate students. The first half of the book takes as its subject the canonical topics in homological algebra: derived functors, Tor and Ext, projective dimensions and spectral sequences. Homology of group and Lie algebras illustrate these topics.  Intermingled are less canonical topics, such as the derived inverse limit functor lim1, local cohomology, Galois cohomology, and affine Lie algebras. The last part of the book covers less traditional topics that are a vital part of the modern homological toolkit: simplicial methods, Hochschild and cyclic homology, derived categories and total derived functors. By making these tools more accessible, the book helps to break down the technological barrier between experts and casual users of homological algebra.},
+  isbn = {978-0-521-43500-0 978-0-521-55987-4 978-1-139-64413-6},
+  langid = {english},
+  file = {/Users/abrahamrojasvega/Zotero/storage/RGTTJ9AE/Weibel - 1994 - An Introduction to Homological Algebra.pdf}
 }
